# IDEALEEU.EU

./: .gitignore  CNAME  LICENSE  LICENSE-DELEGATION.md  QUICK_START.md  README.md  SECURITY.md  _config.yml  idealeeu.prompt.yml  index.md  package-lock.json  package.json
.github/: copilot-instructions.md
00-PROGRAM/: GOVERNANCE.md  README.md  RISK_REGISTER.md  ROADMAP.md
01-FLEET/: README.md
02-AIRCRAFT/: 00-README.md  ARCHITECTURE_OVERVIEW.md  CORRECTIVE_ACTION_PLAN.md  PRD.md  VALIDATION_REPORT.md
02-AIRCRAFT/DIGITAL_TWIN_MODEL/12-CODE/: 00-README.md  Makefile  pyproject.toml
02-AIRCRAFT/DIGITAL_TWIN_MODEL/12-CODE/CI_CD/: README.md
02-AIRCRAFT/DIGITAL_TWIN_MODEL/12-CODE/INFERENCE_RUNTIME/: README.md
02-AIRCRAFT/DIGITAL_TWIN_MODEL/12-CODE/PACKAGING/: README.md
03-SPACECRAFT/: 00-README.md  PRD.md
04-BUSINESS/: README.md
04-SATELLITES/: 00-README.md  PRD.md
05-TELESCOPES/: 00-README.md  PRD.md
06-PROBES/: 00-README.md  PRD.md
07-DRONES/: 00-README.md  PRD.md
08-LAUNCHERS/: 00-README.md  PRD.md
09-STM-SPACE-STATION-MODULES/: 00-README.md  PRD.md
10-BUSINESS/: README.md
11-CONSTALLATIONS/: 00-README.md  PRD.md
12-SWARM/: 00-README.md  PRD.md
13-TEAMS/: 00-README.md  PRD.md
14-COLLAB-NETWORKS/: 00-README.md  PRD.md
aqua-qc/: README.md  VALIDATION.md  requirements.txt
config/: example_usage.py  fastapi_example.py  settings.py
digital-passport/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: README.md  glossary.md  index.md  tfa-domains-reference.md
finance/: README.md  __init__.py  (+3 more)
(+4337 files in other folders)
